--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" integrity="sha384-tKLJeE1ALTUwtXlaGjJYM3sejfssWdAaWR2s97axw4xkiAdMzQjtOjgcyw0Y50KU" crossorigin="anonymous">
         <title>Booki</title>
     </head>
@@ -17,7 +18,7 @@
                 <nav>
                     <p><img src="images/logo/Booki.png"></p>
                     <ul>
-                        <li><a href="#hebergements">Hébergements</a></li>
+                        <li><a class="active" href="#hebergements">Hébergements</a></li>
                         <li><a href="#activites">Activités</a></li>
                     </ul>  
                 </nav>
@@ -32,13 +33,13 @@
                 </form>
                 <ul>
                     <li><strong>Filtres</strong></li>
-                    <li><a href="#"><i class="fas fa-money-bill-wave"></i>Économique</a></li>
-                    <li><a href="#"><i class="fas fa-child"></i>Familial</a></li>
-                    <li><a href="#"><i class="fas fa-heart"></i>Romantique</a></li>
-                    <li><a href="#"><i class="fas fa-dog"></i>Animaux autorisés</a></li>
+                    <li><i class="fas fa-money-bill-wave"></i><a href="#">Économique</a></li>
+                    <li><i class="fas fa-child"></i><a href="#">Familial</a></li>
+                    <li><i class="fas fa-heart"></i><a href="#">Romantique</a></li>
+                    <li><i class="fas fa-dog"></i><a href="#">Animaux autorisés</a></li>
                 </ul>
                 <div>
-                    <i class="fas fa-info info"></i>
+                    <span class="info">i</span>
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
             </section>
@@ -54,11 +55,11 @@
                                 <h5>Auberge La Cannebière</h5>
                                 <p>Nuit à partir de <strong>25€</strong></p>
                                 <p>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill grey"></i>
                                 </p>
                             </div>
                         </article>
@@ -70,11 +71,11 @@
                                 <h5>Hôtel du port</h5>
                                 <p>Nuit à partir de <strong>52€</strong></p>
                                 <p>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
                                 </p>
                             </div>
                         </article>
@@ -86,11 +87,11 @@
                                 <h5>Hôtel Les mouettes</h5>
                                 <p>Nuit à partir de <strong>76€</strong></p>
                                 <p>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill grey"></i>
                                 </p>
                             </div>
                         </article>
@@ -102,11 +103,11 @@
                                 <h5>Hôtel de la mer</h5>
                                 <p>Nuit à partir de <strong>46€</strong></p>
                                 <p>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star"></i>
-                                    <i class="bi bi-star"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill grey"></i>
+                                    <i class="bi bi-star-fill grey"></i>
                                 </p>
                             </div>
                         </article>
@@ -118,11 +119,11 @@
                                 <h5>Hôtel Le Panier</h5>
                                 <p>Nuit à partir de <strong>23€</strong></p>
                                 <p>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill grey"></i>
                                 </p>
                             </div>
                         </article>
@@ -134,11 +135,11 @@
                                 <h5>Hôtel chez Amina</h5>
                                 <p>Nuit à partir de <strong>96€</strong></p>
                                 <p>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
-                                    <i class="bi bi-star-fill"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
+                                    <i class="bi bi-star-fill blue"></i>
                                 </p>
                             </div>
                         </article>
@@ -155,11 +156,11 @@
                             <h5>Hôtel Le soleil du matin</h5>
                             <p>Nuit à partir de <strong>128€</strong></p>
                             <p>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill blue"></i>
+                                <i class="bi bi-star-fill blue"></i>
+                                <i class="bi bi-star-fill blue"></i>
+                                <i class="bi bi-star-fill blue"></i>
+                                <i class="bi bi-star-fill blue"></i>
                             </p>
                         </div>
                     </article>
@@ -171,11 +172,11 @@
                             <h5>Au coeur de l'eau Chambres d'hôtes</h5>
                             <p>Nuit à partir de <strong>71€</strong></p>
                             <p>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star"></i>
+                                <i class="bi bi-star-fill blue"></i>
+                                <i class="bi bi-star-fill blue"></i>
+                                <i class="bi bi-star-fill blue"></i>
+                                <i class="bi bi-star-fill blue"></i>
+                                <i class="bi bi-star-fill grey"></i>
                             </p>
                         </div>
                     </article>
@@ -187,11 +188,11 @@
                             <h5>Hôtel Tout bleu et Blanc</h5>
                             <p>Nuit à partir de <strong>68€</strong></p>
                             <p>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star"></i>
+                                <i class="bi bi-star-fill blue"></i>
+                                <i class="bi bi-star-fill blue"></i>
+                                <i class="bi bi-star-fill blue"></i>
+                                <i class="bi bi-star-fill blue"></i>
+                                <i class="bi bi-star-fill grey"></i>
                             </p>
                         </div>
                     </article>
