refactor: add alt attribut to elements img

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="container">
         <header>    
             <nav>
-                <img src="images/logo/Booki.png">   
+                <img src="images/logo/Booki.png" alt="logo Booki">   
                 <ul>
                     <li><a class="active" href="#hebergements">Hébergements</a></li>
                     <li><a href="#activites">Activités</a></li>
@@ -50,7 +50,7 @@
                     <article>
                         <a href="#">
                             <div class="photo">
-                                <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+                                <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge la cannebière">
                             </div>
                             <div class="description">
                                 <h3>Auberge La Cannebière</h3>
@@ -68,7 +68,7 @@
                     <article>
                         <a href="#">
                             <div class="photo">
-                                <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+                                <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hôtel du port">
                             </div>
                             <div class="description">
                                 <h3>Hôtel du port</h3>
@@ -86,7 +86,7 @@
                     <article>
                         <a href="#">
                             <div class="photo">
-                                <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
+                                <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hôtel les mouettes">
                             </div>
                             <div class="description">
                                 <h3>Hôtel Les mouettes</h3>
@@ -104,7 +104,7 @@
                     <article>
                         <a href="#">
                             <div class="photo">
-                                <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                                <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hôtel de la mer">
                             </div>
                             <div class="description">
                                 <h3>Hôtel de la mer</h3>
@@ -122,7 +122,7 @@
                     <article>
                         <a href="#">
                             <div class="photo">
-                                <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+                                <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="hôtel le panier">
                             </div>
                             <div class="description">
                                 <h3>Hôtel Le Panier</h3>
@@ -140,7 +140,7 @@
                     <article>
                         <a href="#">
                             <div class="photo">
-                                <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+                                <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hôtel chez amina">
                             </div>
                             <div class="description">
                                 <h3>Hôtel chez Amina</h3>
@@ -166,7 +166,7 @@
                 <a href="#">
                     <article>
                         <div class="photos_populaire">
-                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hôtel le soleil du matin">
                         </div>
                         <div class="desc_populaire">
                             <div>
@@ -186,7 +186,7 @@
                 <a href="#">
                     <article>
                         <div class="photos_populaire">
-                            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
+                            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
                         </div>
                         <div class="desc_populaire">
                             <div>
@@ -206,7 +206,7 @@
                 <a href="#">    
                     <article>
                         <div class="photos_populaire">
-                            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
+                            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hôtel tout bleu et blanc">
                         </div>
                         <div class="desc_populaire">
                             <div>
@@ -230,33 +230,33 @@
             <div>
                 <div>
                     <article class="port">
-                        <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
+                        <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port">
                         <p>Vieux Port</p>
                     </article>
                 </div>
                 <div>
                     <article class="fort">
-                        <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
+                        <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort de pomègues">
                         <p>Fort de Pomègues</p>
                     </article>
                     <article class="iles">
-                        <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
+                        <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="îles du frioul">
                         <p>Îles du Frioul</p>
                     </article>
                 </div>
                 <div>
                     <article class="calanques">
-                        <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
+                        <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc national des calanques">
                         <p>Parc National des Calanques</p>
                     </article>
                 </div>
                 <div>
                     <article class="eglise">
-                        <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg">
+                        <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre dame de la garde">
                         <p>Notre-Dame-de-la-Garde</p>
                     </article>
                     <article class="longchamp">
-                        <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg">
+                        <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc longchamps">
                         <p>Parc Longchamps</p>
                     </article>
                 </div>
