refactor: addd breakpoint max 768px

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/da72397d66.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,10 +34,12 @@
             </form>
             <div id="filtres">
                 <div><strong>Filtres</strong></div>
-                <div><a href="#"><i class="fas fa-money-bill-wave"></i>Économique</a></div>
-                <div><a href="#"><i class="fas fa-child"></i>Familial</a></div>
-                <div><a href="#"><i class="fas fa-heart"></i>Romantique</a></div>
-                <div><a href="#"><i class="fas fa-dog"></i>Animaux autorisés</a></div>
+                <div>
+                    <div><a href="#"><i class="fas fa-money-bill-wave"></i>Économique</a></div>
+                    <div><a href="#"><i class="fas fa-child"></i>Familial</a></div>
+                    <div><a href="#"><i class="fas fa-heart"></i>Romantique</a></div>
+                    <div><a href="#"><i class="fas fa-dog"></i>Animaux autorisés</a></div>    
+                </div>
             </div>
             <div>
                 <span class="info">i</span>
