change elements article to figure in activites and elements in filters

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button>Rechercher</button>
             </form>
             <div id="filtres">
-                <div><strong>Filtres</strong></div>
+                <h3>Filtres</h3>
                 <div>
                     <div><a href="#"><i class="fas fa-money-bill-wave"></i>Économique</a></div>
                     <div><a href="#"><i class="fas fa-child"></i>Familial</a></div>
@@ -232,36 +232,36 @@
             <h2>Activités à Marseille</h2>
             <div>
                 <div>
-                    <article class="port">
+                    <figure class="port">
                         <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port">
-                        <p>Vieux Port</p>
-                    </article>
+                        <figcaption>Vieux Port</figcaption>
+                    </figure>
                 </div>
                 <div>
-                    <article class="fort">
+                    <figure class="fort">
                         <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort de pomègues">
-                        <p>Fort de Pomègues</p>
-                    </article>
-                    <article class="iles">
+                        <figcaption>Fort de Pomègues</figcaption>
+                    </figure>
+                    <figure class="iles">
                         <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="îles du frioul">
-                        <p>Îles du Frioul</p>
-                    </article>
+                        <figcaption>Îles du Frioul</figcaption>
+                    </figure>
                 </div>
                 <div>
-                    <article class="calanques">
+                    <figure class="calanques">
                         <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc national des calanques">
-                        <p>Parc National des Calanques</p>
-                    </article>
+                        <figcaption>Parc National des Calanques</figcaption>
+                    </figure>
                 </div>
                 <div>
-                    <article class="eglise">
+                    <figure class="eglise">
                         <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre dame de la garde">
-                        <p>Notre-Dame-de-la-Garde</p>
-                    </article>
-                    <article class="longchamp">
+                        <figcaption>Notre-Dame-de-la-Garde</figcaption>
+                    </figure>
+                    <figure class="longchamp">
                         <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc longchamps">
-                        <p>Parc Longchamps</p>
-                    </article>
+                        <figcaption>Parc Longchamps</figcaption>
+                    </figure>
                 </div>
             </div>
         </section>
