add language & del elements action in form

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +27,7 @@
         <section id="formulaire">
             <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
             <p>En plein centre ville ou en pleine nature</p>
-            <form action="" method="get">
+            <form method="get">
                 <i class="fas fa-map-marker-alt"></i>
                 <input type="search" value="Marseille, France">
                 <button>Rechercher</button>
