fix: add icon mobile search & fix bugs

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <form method="get">
                 <i class="fas fa-map-marker-alt"></i>
                 <input type="search" value="Marseille, France">
-                <button>Rechercher</button>
+                <button><i class="fas fa-search"></i></button>
             </form>
             <div id="filtres">
                 <h3>Filtres</h3>
