fix: errors msames ids

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             <div id="galleryLodging">
                 <article>
                     <a href="#">
-                        <div id="photoLodging">
+                        <div class="photoLodging">
                             <img src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge la cannebière">
                         </div>
-                        <div id="descLodging">
+                        <div class="descLodging">
                             <h3>Auberge La Cannebière</h3>
                             <p>Nuit à partir de <strong>25€</strong></p>
                             <div class="spaceStars">
@@ -69,10 +69,10 @@
                 </article>
                 <article>
                     <a href="#">
-                        <div id="photoLodging">
+                        <div class="photoLodging">
                             <img src="assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hôtel du port">
                         </div>
-                        <div id="descLodging">
+                        <div class="descLodging">
                             <h3>Hôtel du port</h3>
                             <p>Nuit à partir de <strong>52€</strong></p>
                             <div class="spaceStars">
@@ -87,10 +87,10 @@
                 </article>
                 <article>
                     <a href="#">
-                        <div id="photoLodging">
+                        <div class="photoLodging">
                             <img src="assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hôtel les mouettes">
                         </div>
-                        <div id="descLodging">
+                        <div class="descLodging">
                             <h3>Hôtel Les mouettes</h3>
                             <p>Nuit à partir de <strong>76€</strong></p>
                             <div class="spaceStars">
@@ -105,10 +105,10 @@
                 </article>
                 <article>
                     <a href="#">
-                        <div id="photoLodging">
+                        <div class="photoLodging">
                             <img src="assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hôtel de la mer">
                         </div>
-                        <div id="descLodging">
+                        <div class="descLodging">
                             <h3>Hôtel de la mer</h3>
                             <p>Nuit à partir de <strong>46€</strong></p>
                             <div class="spaceStars">
@@ -123,10 +123,10 @@
                 </article>
                 <article>
                     <a href="#">
-                        <div id="photoLodging">
+                        <div class="photoLodging">
                             <img src="assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="hôtel le panier">
                         </div>
-                        <div id="descLodging">
+                        <div class="descLodging">
                             <h3>Hôtel Le Panier</h3>
                             <p>Nuit à partir de <strong>23€</strong></p>
                             <div class="spaceStars">
@@ -141,10 +141,10 @@
                 </article>
                 <article>
                     <a href="#">
-                        <div id="photoLodging">
+                        <div class="photoLodging">
                             <img src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hôtel chez amina">
                         </div>
-                        <div id="descLodging">
+                        <div class="descLodging">
                             <h3>Hôtel chez Amina</h3>
                             <p>Nuit à partir de <strong>96€</strong></p>
                             <div class="spaceStars">
@@ -168,10 +168,10 @@
             <div>
                 <a href="#">
                     <article>
-                        <div id="photoTopLogding">
+                        <div class="photoTopLogding">
                             <img src="assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hôtel le soleil du matin">
                         </div>
-                        <div id="descTopLodging">
+                        <div class="descTopLodging">
                             <div>
                                 <h3>Hôtel Le soleil du matin</h3>
                                 <p>Nuit à partir de <strong>128€</strong></p>
@@ -188,10 +188,10 @@
                 </a>    
                 <a href="#">
                     <article>
-                        <div id="photoTopLogding">
+                        <div class="photoTopLogding">
                             <img src="assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
                         </div>
-                        <div id="descTopLodging">
+                        <div class="descTopLodging">
                             <div>
                                 <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                                 <p>Nuit à partir de <strong>71€</strong></p>
@@ -208,10 +208,10 @@
                 </a>
                 <a href="#">    
                     <article>
-                        <div id="photoTopLogding">
+                        <div class="photoTopLogding">
                             <img src="assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hôtel tout bleu et blanc">
                         </div>
-                        <div id="descTopLodging">
+                        <div class="descTopLodging">
                             <div>
                                 <h3>Hôtel Tout bleu et Blanc</h3>
                                 <p>Nuit à partir de <strong>68€</strong></p>    
