fix: remove useless elts

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <div id="filters">
             <h3>Filtres</h3>
             <div>
-                <div><a href="#"><i class="fas fa-money-bill-wave iconFilters"></i>Économique</a></div>
-                <div><a href="#"><i class="fas fa-child iconFilters"></i>Familial</a></div>
-                <div><a href="#"><i class="fas fa-heart iconFilters"></i>Romantique</a></div>
-                <div><a href="#"><i class="fas fa-dog iconFilters"></i>Animaux autorisés</a></div>    
+                <a href="#"><i class="fas fa-money-bill-wave iconFilters"></i>Économique</a>
+                <a href="#"><i class="fas fa-child iconFilters"></i>Familial</a>
+                <a href="#"><i class="fas fa-heart iconFilters"></i>Romantique</a>
+                <a href="#"><i class="fas fa-dog iconFilters"></i>Animaux autorisés</a>
             </div>
         </div>
         <div id="available">
