--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
             <h2>Hébergements à Marseille</h2>
             <div id="galleryLodging">
                 <article>
-                    <a href="#">
-                        <div class="photoLodging">
-                            <img src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge la cannebière">
-                        </div>
+                        <img class="photoLodging" src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge la cannebière">
                         <div class="descLodging">
                             <h3>Auberge La Cannebière</h3>
                             <p>Nuit à partir de <strong>25€</strong></p>
@@ -69,9 +66,7 @@
                 </article>
                 <article>
                     <a href="#">
-                        <div class="photoLodging">
-                            <img src="assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hôtel du port">
-                        </div>
+                        <img class="photoLodging" src="assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hôtel du port">
                         <div class="descLodging">
                             <h3>Hôtel du port</h3>
                             <p>Nuit à partir de <strong>52€</strong></p>
@@ -87,9 +82,7 @@
                 </article>
                 <article>
                     <a href="#">
-                        <div class="photoLodging">
-                            <img src="assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hôtel les mouettes">
-                        </div>
+                        <img class="photoLodging" src="assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hôtel les mouettes">
                         <div class="descLodging">
                             <h3>Hôtel Les mouettes</h3>
                             <p>Nuit à partir de <strong>76€</strong></p>
@@ -105,9 +98,7 @@
                 </article>
                 <article>
                     <a href="#">
-                        <div class="photoLodging">
-                            <img src="assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hôtel de la mer">
-                        </div>
+                        <img class="photoLodging" src="assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hôtel de la mer">
                         <div class="descLodging">
                             <h3>Hôtel de la mer</h3>
                             <p>Nuit à partir de <strong>46€</strong></p>
@@ -123,9 +114,7 @@
                 </article>
                 <article>
                     <a href="#">
-                        <div class="photoLodging">
-                            <img src="assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="hôtel le panier">
-                        </div>
+                        <img class="photoLodging" src="assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="hôtel le panier">
                         <div class="descLodging">
                             <h3>Hôtel Le Panier</h3>
                             <p>Nuit à partir de <strong>23€</strong></p>
@@ -141,9 +130,7 @@
                 </article>
                 <article>
                     <a href="#">
-                        <div class="photoLodging">
-                            <img src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hôtel chez amina">
-                        </div>
+                        <img class="photoLodging" src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hôtel chez amina">
                         <div class="descLodging">
                             <h3>Hôtel chez Amina</h3>
                             <p>Nuit à partir de <strong>96€</strong></p>
@@ -168,9 +155,7 @@
             <div>
                 <a href="#">
                     <article>
-                        <div class="photoTopLogding">
-                            <img src="assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hôtel le soleil du matin">
-                        </div>
+                            <img class="photoTopLogding" src="assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hôtel le soleil du matin">
                         <div class="descTopLodging">
                             <div>
                                 <h3>Hôtel Le soleil du matin</h3>
@@ -188,9 +173,7 @@
                 </a>    
                 <a href="#">
                     <article>
-                        <div class="photoTopLogding">
-                            <img src="assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
-                        </div>
+                            <img class="photoTopLogding" src="assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
                         <div class="descTopLodging">
                             <div>
                                 <h3>Au coeur de l'eau Chambres d'hôtes</h3>
@@ -208,9 +191,7 @@
                 </a>
                 <a href="#">    
                     <article>
-                        <div class="photoTopLogding">
-                            <img src="assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hôtel tout bleu et blanc">
-                        </div>
+                            <img class="photoTopLogding" src="assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hôtel tout bleu et blanc">
                         <div class="descTopLodging">
                             <div>
                                 <h3>Hôtel Tout bleu et Blanc</h3>
