fix: error elt a

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <h2>Hébergements à Marseille</h2>
             <div id="galleryLodging">
                 <article>
+                    <a href="#">
                         <img class="photoLodging" src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge la cannebière">
                         <div class="descLodging">
                             <h3>Auberge La Cannebière</h3>
@@ -155,7 +156,7 @@
             <div>
                 <a href="#">
                     <article>
-                            <img class="photoTopLogding" src="assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hôtel le soleil du matin">
+                        <img class="photoTopLogding" src="assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hôtel le soleil du matin">
                         <div class="descTopLodging">
                             <div>
                                 <h3>Hôtel Le soleil du matin</h3>
@@ -173,7 +174,7 @@
                 </a>    
                 <a href="#">
                     <article>
-                            <img class="photoTopLogding" src="assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
+                        <img class="photoTopLogding" src="assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
                         <div class="descTopLodging">
                             <div>
                                 <h3>Au coeur de l'eau Chambres d'hôtes</h3>
@@ -191,7 +192,7 @@
                 </a>
                 <a href="#">    
                     <article>
-                            <img class="photoTopLogding" src="assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hôtel tout bleu et blanc">
+                        <img class="photoTopLogding" src="assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hôtel tout bleu et blanc">
                         <div class="descTopLodging">
                             <div>
                                 <h3>Hôtel Tout bleu et Blanc</h3>
