--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             <div class="spaceStars">
                                 <i class="bi bi-star-fill blueStar"></i>
                                 <i class="bi bi-star-fill blueStar"></i>
-                                <i class="bi bi-star-fill blueStar"></i>
+                                <i class="bi bi-star-fill blueStar"></i>z
                                 <i class="bi bi-star-fill blueStar"></i>
                                 <i class="bi bi-star-fill greyStar"></i>
                             </div>
@@ -216,34 +216,46 @@
         <div>
             <div>
                 <figure id="port">
-                    <img src="assets/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port">
-                    <figcaption>Vieux Port</figcaption>
+                    <a href="#">
+                        <img src="assets/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port">
+                        <figcaption>Vieux Port</figcaption>
+                    </a>
                 </figure>
             </div>
             <div>
                 <figure id="fort">
-                    <img src="assets/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort de pomègues">
-                    <figcaption>Fort de Pomègues</figcaption>
+                    <a href="#">
+                        <img src="assets/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort de pomègues">
+                        <figcaption>Fort de Pomègues</figcaption>
+                    </a>
                 </figure>
                 <figure id="island">
-                    <img src="assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="îles du frioul">
-                    <figcaption>Îles du Frioul</figcaption>
+                    <a href="#">
+                        <img src="assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="îles du frioul">
+                        <figcaption>Îles du Frioul</figcaption>
+                    </a>
                 </figure>
             </div>
             <div>
                 <figure id="parknational">
-                    <img src="assets/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc national des calanques">
-                    <figcaption>Parc National des Calanques</figcaption>
+                    <a href="#">
+                        <img src="assets/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc national des calanques">
+                        <figcaption>Parc National des Calanques</figcaption>
+                    </a>
                 </figure>
             </div>
             <div>
                 <figure id="church">
-                    <img src="assets/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre dame de la garde">
-                    <figcaption>Notre-Dame-de-la-Garde</figcaption>
+                    <a href="#">
+                        <img src="assets/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre dame de la garde">
+                        <figcaption>Notre-Dame-de-la-Garde</figcaption>
+                    </a>
                 </figure>
                 <figure id="park">
-                    <img src="assets/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc longchamps">
-                    <figcaption>Parc Longchamps</figcaption>
+                    <a href="#">
+                        <img src="assets/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc longchamps">
+                        <figcaption>Parc Longchamps</figcaption>
+                    </a>
                 </figure>
             </div>
         </div>
