--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             <div class="spaceStars">
                                 <i class="bi bi-star-fill blueStar"></i>
                                 <i class="bi bi-star-fill blueStar"></i>
-                                <i class="bi bi-star-fill blueStar"></i>z
+                                <i class="bi bi-star-fill blueStar"></i>
                                 <i class="bi bi-star-fill blueStar"></i>
                                 <i class="bi bi-star-fill greyStar"></i>
                             </div>
