fix: adjust marges & font-sizes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button><i class="fas fa-search"></i></button>
         </form>
         <div id="filters">
-            <h3>Filtres</h3>
+            <span>Filtres</span>
             <div>
                 <a href="#"><i class="fas fa-money-bill-wave iconFilters"></i>Économique</a>
                 <a href="#"><i class="fas fa-child iconFilters"></i>Familial</a>
@@ -40,10 +40,7 @@
                 <a href="#"><i class="fas fa-dog iconFilters"></i>Animaux autorisés</a>
             </div>
         </div>
-        <div id="available">
-            <span id="infoIcon">i</span>
-            <p>Plus de 500 logements sont disponibles dans cette ville</p>
-        </div>
+        <data id="available" value="500"><span id="infoIcon">i</span>Plus de 500 logements sont disponibles dans cette ville</data>
     </section>
     <main>
         <section id="lodging">
@@ -53,7 +50,7 @@
                     <a href="#">
                         <img class="photoLodging" src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge la cannebière">
                         <div class="descLodging">
-                            <h3>Auberge La Cannebière</h3>
+                            <h4>Auberge La Cannebière</h4>
                             <p>Nuit à partir de <strong>25€</strong></p>
                             <div class="spaceStars">
                                 <i class="bi bi-star-fill blueStar"></i>
@@ -69,7 +66,7 @@
                     <a href="#">
                         <img class="photoLodging" src="assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hôtel du port">
                         <div class="descLodging">
-                            <h3>Hôtel du port</h3>
+                            <h4>Hôtel du port</h4>
                             <p>Nuit à partir de <strong>52€</strong></p>
                             <div class="spaceStars">
                                 <i class="bi bi-star-fill blueStar"></i>
@@ -85,7 +82,7 @@
                     <a href="#">
                         <img class="photoLodging" src="assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hôtel les mouettes">
                         <div class="descLodging">
-                            <h3>Hôtel Les mouettes</h3>
+                            <h4>Hôtel Les mouettes</h4>
                             <p>Nuit à partir de <strong>76€</strong></p>
                             <div class="spaceStars">
                                 <i class="bi bi-star-fill blueStar"></i>
@@ -101,7 +98,7 @@
                     <a href="#">
                         <img class="photoLodging" src="assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hôtel de la mer">
                         <div class="descLodging">
-                            <h3>Hôtel de la mer</h3>
+                            <h4>Hôtel de la mer</h4>
                             <p>Nuit à partir de <strong>46€</strong></p>
                             <div class="spaceStars">
                                 <i class="bi bi-star-fill blueStar"></i>
@@ -117,7 +114,7 @@
                     <a href="#">
                         <img class="photoLodging" src="assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="hôtel le panier">
                         <div class="descLodging">
-                            <h3>Hôtel Le Panier</h3>
+                            <h4>Hôtel Le Panier</h4>
                             <p>Nuit à partir de <strong>23€</strong></p>
                             <div class="spaceStars">
                                 <i class="bi bi-star-fill blueStar"></i>
@@ -133,7 +130,7 @@
                     <a href="#">
                         <img class="photoLodging" src="assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hôtel chez amina">
                         <div class="descLodging">
-                            <h3>Hôtel chez Amina</h3>
+                            <h4>Hôtel chez Amina</h4>
                             <p>Nuit à partir de <strong>96€</strong></p>
                             <div class="spaceStars">
                                 <i class="bi bi-star-fill blueStar"></i>
@@ -159,7 +156,7 @@
                         <img class="photoTopLogding" src="assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hôtel le soleil du matin">
                         <div class="descTopLodging">
                             <div>
-                                <h3>Hôtel Le soleil du matin</h3>
+                                <h4>Hôtel Le soleil du matin</h4>
                                 <p>Nuit à partir de <strong>128€</strong></p>
                             </div>
                             <div class="spaceStars">
@@ -177,7 +174,7 @@
                         <img class="photoTopLogding" src="assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
                         <div class="descTopLodging">
                             <div>
-                                <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                                <h4>Au coeur de l'eau Chambres d'hôtes</h4>
                                 <p>Nuit à partir de <strong>71€</strong></p>
                             </div>
                             <div class="spaceStars">
@@ -195,7 +192,7 @@
                         <img class="photoTopLogding" src="assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hôtel tout bleu et blanc">
                         <div class="descTopLodging">
                             <div>
-                                <h3>Hôtel Tout bleu et Blanc</h3>
+                                <h4>Hôtel Tout bleu et Blanc</h4>
                                 <p>Nuit à partir de <strong>68€</strong></p>    
                             </div>
                             <div class="spaceStars">
@@ -261,28 +258,28 @@
         </div>
     </section>
     <footer>
-        <div>
+        <section>
             <h3>A propos</h3>
             <ul>
                 <li><a href="#">Fonctionnement du site</a></li>
                 <li><a href="#">Conditions générales de vente</a></li>
                 <li><a href="#">Données et confidentialité</a></li>
             </ul>
-        </div>
-        <div>
+        </section>
+        <section>
             <h3>Nos Hébergements</h3>
             <ul>
                 <li><a href="#">Charte qualité</a></li>
                 <li><a href="#">Soumettre votre hôtel</a></li>
             </ul>
-        </div>
-        <div>
+        </section>
+        <section>
             <h3>Assistance</h3>
             <ul>
                 <li><a href="#">Centre d'aide</a></li>
                 <li><a href="#">Nous contacter</a></li>
             </ul>
-        </div>
+        </section>
     </footer>
 </body>
 </html>
