fix: adjust sizes

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         </div>
     </section>
     <footer>
-        <section>
+        <section id="about">
             <h3>A propos</h3>
             <ul>
                 <li><a href="#">Fonctionnement du site</a></li>
@@ -266,14 +266,14 @@
                 <li><a href="#">Données et confidentialité</a></li>
             </ul>
         </section>
-        <section>
+        <section id="ourLodging">
             <h3>Nos Hébergements</h3>
             <ul>
                 <li><a href="#">Charte qualité</a></li>
                 <li><a href="#">Soumettre votre hôtel</a></li>
             </ul>
         </section>
-        <section>
+        <section id="help">
             <h3>Assistance</h3>
             <ul>
                 <li><a href="#">Centre d'aide</a></li>
